--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ Thiết kế bộ nhận diện này giúp mình hiểu rõ hơn về văn hoá,
         </div>
       </div>
       <div class="row">
-        <div class="p-0 order-2 order-md-1 col-lg-6 w-100"> <iframe width="100%" height="350" src="anh/po.png" scrolling="no" frameborder="0"></iframe> </div>
+        <div class="p-0 order-2 order-md-1 col-lg-6 "> <iframe width="100%" height="350" src="anh/bìa.png" scrolling="no" frameborder="0"></iframe> </div>
         <div class="px-4 order-1 order-md-2 col-lg-6">
           <h2 class="mb-4">A greater artist</h2>
           <form>
